# binaryen.ml

./: CHANGELOG.md  binaryen.opam  dune-project  dune-workspace  package.json  winpatch.patch
.github/workflows/: esy.yml  opam.yml  release.yml
esy.lock/: index.json
src/: array_type.wat  dune  export.wat  expression.wat  literal.wat  module_feature.wat  op.wat  packed_type.wat  settings.wat  type.ml  type.wat
test/: dune
